[gd_scene load_steps=4 format=3 uid="uid://dpu0r01g08cg3"]

[ext_resource type="Script" uid="uid://df74itlomy7yj" path="res://scripts/core/simulation_engine.gd" id="1_sim"]
[ext_resource type="Script" uid="uid://dqoc4rfbl715i" path="res://scenes/main.gd" id="3_main"]
[ext_resource type="PackedScene" uid="uid://baalr12vqcr16" path="res://objects/test_vehicle.tscn" id="4_tbgi4"]

[node name="Main" type="Node2D"]
script = ExtResource("3_main")

[node name="SimulationEngine" type="Node" parent="."]
script = ExtResource("1_sim")

[node name="GameWorld" type="Node2D" parent="."]

[node name="Destination" type="Sprite2D" parent="GameWorld"]
modulate = Color(0, 1, 0, 0.5)
position = Vector2(700, 300)
scale = Vector2(0.3, 0.3)

[node name="TestVehicle" parent="GameWorld" instance=ExtResource("4_tbgi4")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CodeEditor" type="TextEdit" parent="UI"]
offset_left = 20.0
offset_top = 450.0
offset_right = 400.0
offset_bottom = 570.0
placeholder_text = "Enter code here... (e.g., car.go())"

[node name="RunButton" type="Button" parent="UI"]
offset_left = 420.0
offset_top = 450.0
offset_right = 520.0
offset_bottom = 490.0
text = "Run Code"

[node name="StatusLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 50.0
text = "Status: Ready"

[node name="InstructionsLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 60.0
offset_right = 600.0
offset_bottom = 120.0
text = "Instructions:
- Type 'car.go()' to start the car
- Press Space to pause/resume
- Press R to reset"
